OAKHILL/src/objects/Document_Recipient__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Document Recipients</relationshipLabel>
        <relationshipName>Document_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investor_Report_Document__c</fullName>
        <label>Investor Report Document</label>
        <referenceTo>Investor_Report_Document__c</referenceTo>
        <relationshipLabel>Document Recipients</relationshipLabel>
        <relationshipName>Document_Recipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sent_Date__c</fullName>
        <label>Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unsent</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Document Recipient</label>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Document  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>